[package]
name = "file"
version = "1.1.2"
authors = ["Kornel Lesiński <kornel@geekhood.net>"]
description = "For Rust 1.25 and older. 1-liner convenience functions for reading and writing files"
license = "MIT"
repository = "https://github.com/kornelski/rust-file.git"
readme = "README.md"
categories = ["rust-patterns"]
documentation = "https://kornelski.github.io/rust-file/file/"
